--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,3 +6,18 @@
     position: fixed;
     background-color: #2f2f2f;
 }
+.bottom-audio {
+    width: 500px;
+    height: 80px;
+    position: relative;
+    display: block;
+    border-radius: 0;
+    margin: 0 auto;
+}
+audio {
+    display: block;
+    width: 100%;
+    height: 50px;
+    position: relative;
+    margin-top: 15px;
+}
