--- a/src/views/HomePage/First.css
+++ b/src/views/HomePage/First.css
@@ -128,6 +128,11 @@
     overflow: hidden;
     display: block;
     position: relative;
+    cursor: pointer;
+}
+.tab-div img:hover {
+    transition: .3s ease-in-out;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.12);
 }
 .tab-div p {
     width: 100%;
@@ -136,6 +141,31 @@
     font-size: 12px;
     color: #333;
 }
+.dark-mode {
+    width: 100%;
+    height: 90px;
+    display: block;
+    position: relative;
+    background-color: #f8f8f8;
+    border-radius: 3px;
+    overflow: hidden;
+    margin-top: 20px;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.12);
+}
+.dark-mode p {
+    width: 100%;
+    height: 20px;
+    line-height: 20px;
+    display: block;
+    position: relative;
+    font-size: 12px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+
+
+
 
 
 
