--- a/src/views/HomePage/First.css
+++ b/src/views/HomePage/First.css
@@ -1,3 +1,8 @@
+* {
+    list-style: none;
+    user-select: none;
+    -webkit-user-select: none;
+}
 .background {
     width: 100vw;
     height: 38vw;
@@ -131,12 +136,21 @@
     cursor: pointer;
 }
 .tab-div img:hover {
-    transition: .3s ease-in-out;
-    box-shadow: 0 10px 10px rgba(0,0,0,0.12);
+    transition: .2s ease-in-out;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+}
+.img-bk {
+    width: 140px;
+    height: 140px;
+    display: block;
+    position: relative;
+    background-color: #f5f5f5;
 }
 .tab-div p {
     width: 100%;
     height: 20px;
+    text-overflow: ellipsis;
+    overflow: hidden;
     line-height: 20px;text-align: left;
     font-size: 12px;
     color: #333;
@@ -180,4 +194,90 @@
 .el-carousel__item img {
     width: 980px;
     height: 280px;
+}
+.hot-search {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+    padding: 0;
+    margin: 0;
+}
+.hot-search li {
+    width: 95%;
+    height: 30px;
+    cursor: pointer;
+    border-radius: 3px;
+    overflow: hidden;
+    background-color: rgba(245, 245, 245, 0.55);
+    backdrop-filter: blur(10px);
+    text-align: left;
+    line-height: 30px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    margin: 5px auto;
+    font-size: 12px;
+}
+.hot-search li:not(:nth-child(1)):hover {
+    color: #C20C0C;
+    transition: .2s ease-in-out;
+}
+.hot-search li:nth-child(2) {
+    background-color: rgba(255, 69, 0, 0.55);
+}
+.hot-search li:nth-child(3) {
+    background-color: rgba(255, 69, 0, 0.55);
+}
+.hot-search li:nth-child(4) {
+    background-color: rgba(255, 69, 0, 0.55);
+}
+.left-title {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 20px;
+    display: block;
+    position: relative;
+    font-weight: bold;
+}
+.left-musician {
+    width: 100%;
+    height: 472px;
+    display: block;
+    position: relative;
+    padding: 20px;
+}
+.singer {
+    width: 170px;
+    height: 200px;
+    display: block;
+    position: relative;
+    margin-bottom: 10px;
+    float: left;
+}
+.singer-bk {
+    width: 140px;
+    height: 140px;
+    margin: 0 auto;
+    display: block;
+    border-radius: 3px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    background-color: #f5f5f5;
+}
+.singer-bk img {
+    width: 140px;
+    height: 140px;
+}
+.singer-bk:hover {
+    transition: .2s ease-in-out;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+}
+.singer p {
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-size: 12px;
 }
