--- a/src/views/SecondPage/Second.css
+++ b/src/views/SecondPage/Second.css
@@ -7,3 +7,56 @@
     text-align: center;
     background-color: #f5f5f5;
 }
+.inner {
+    width: 980px;
+    margin: 0 auto;
+    height: 100%;
+    display: block;
+    position: relative;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border: 1px solid #d3d3d3;
+}
+.user-info {
+    width: 100%;
+    height: 250px;
+    display: block;
+    position: relative;
+}
+.avatar {
+    width: 306px;
+    height: 100%;
+    display: block;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    position: relative;
+}
+.user-img {
+    width: 140px;
+    height: 140px;
+    float: left;
+    display: block;
+    border-radius: 70px;
+    position: relative;
+    overflow: hidden;
+    background-color: #f5f5f5;
+}
+.user-img img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+    cursor: pointer;
+}
+.user-img:hover {
+    transition: .2s ease-in-out;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+}
+.avatar-div {
+    width: 150px;
+    height: 100%;
+    float: left;
+    display: block;
+    position: relative;
+    background-color: #ff5;
+}
